mac: Fix IOSurface clearing for RPDQ CALayer promotion.

The scissor rect should never affect clearing of the IOSurface.

BUG=638526
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2250883004
Cr-Commit-Position: refs/heads/master@{#413243}